# pv_dispute_resolution

./: .gitignore  folder_creation_windows_command.txt
pv_disp_resol_auth_service/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
pv_disp_resol_auth_service/requirements/: requirements.txt
pv_disp_resol_auth_service/src/: main.py
pv_disp_resol_auth_service/src/config/: settings.py
pv_disp_resol_auth_service/src/constants/: __init__.py  auth_constants.py
pv_disp_resol_auth_service/src/core/exceptions/: __init__.py  exceptions.py  handlers.py
pv_disp_resol_auth_service/src/core/services/: __init__.py  auth_service.py
pv_disp_resol_auth_service/src/data/clients/: __init__.py  postgres_client.py
pv_disp_resol_auth_service/src/data/migrations/: runner.py
pv_disp_resol_auth_service/src/schemas/: __init__.py  auth_schemas.py
pv_disp_resol_auth_service/src/utils/: __init__.py  jwt_utils.py
pv_disp_resol_dispute_resolution_service/: Dockerfile  main.py  pyproject.toml  seed_data.py
pv_disp_resol_dispute_resolution_service/requirements/: base.txt
pv_disp_resol_dispute_resolution_service/src/: main.py  redis_setup_commands.txt
pv_disp_resol_dispute_resolution_service/src/config/: settings.py
pv_disp_resol_dispute_resolution_service/src/constants/: enums.py
pv_disp_resol_dispute_resolution_service/src/control/: celery_app.py  tasks.py
pv_disp_resol_dispute_resolution_service/src/schemas/: schemas.py
pv_disp_resol_dispute_resolution_service/src/utils/: jwt.py  pdf_extractor.py
pv_disp_resol_frontend/: .dockerignore  (+8 more)
(+80 files in other folders)
